Issue #18561: Skip name in ctypes' _build_callargs() if name is NULL. CID 486199